# Proto_CMake_Template

./: CMakeLists.txt  README.md
proto/: CMakeLists.txt  test.proto
src/: CMakeLists.txt  test.cc
